--- a/makingticket/Views/Home/Signup.cshtml
+++ b/makingticket/Views/Home/Signup.cshtml
@@ -3,8 +3,9 @@
 *@
 @{
 }
-<h2>Login</h2>
-<form asp-action="Login" method="post">
+
+<h2>Signup</h2>
+<form asp-action="Signup" method="post">
     <div class="form-group">
         <label>Email</label>
         <input name="email" class="form-control" />
@@ -13,10 +14,6 @@
         <label>Password</label>
         <input name="password" type="password" class="form-control" />
     </div>
-    <div class="form-group">
-        <input name="rememberMe" type="checkbox" />
-        <label>Remember Me</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary">Signup</button>
 </form>
-<a asp-action="Signup">Don't have an account? Sign up</a>
+<a asp-action="Login">Already have an account? Login</a>
