--- a/makingticket/Views/Shared/_Layout.cshtml
+++ b/makingticket/Views/Shared/_Layout.cshtml
@@ -35,6 +35,12 @@
                                     <a class="nav-link text-dark" asp-controller="Ticket" asp-action="Manage">Manage Tickets</a>
                                 </li>
                             }
+                            @if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Role" asp-action="Index">Role Management</a>
+                                </li>
+                            }
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Home" asp-action="Logout">Logout</a>
                             </li>
