--- a/makingticket/Views/Shared/_Layout.cshtml
+++ b/makingticket/Views/Shared/_Layout.cshtml
@@ -42,16 +42,16 @@
                                 </li>
                             }
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Home" asp-action="Logout">Logout</a>
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Logout</a>
                             </li>
                         }
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Home" asp-action="Login">Login</a>
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Home" asp-action="Signup">Signup</a>
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Signup">Signup</a>
                             </li>
                         }
                     </ul>
