--- a/makingticket/Views/Role/Index.cshtml
+++ b/makingticket/Views/Role/Index.cshtml
@@ -79,6 +79,7 @@
         </div>
     </div>
 </div>
+@section Scrip{
 
 <script>
     function showRoleChangeModal(userId, userName) {
@@ -101,3 +102,5 @@
     }
 </script>
 
+
+}
