--- a/makingticket/Views/Shared/_Layout.cshtml
+++ b/makingticket/Views/Shared/_Layout.cshtml
@@ -26,15 +26,13 @@
                                     <a class="nav-link text-dark" asp-controller="Ticket" asp-action="Create">Create Ticket</a>
                                 </li>
                             }
+                            @if (User.IsInRole("User")){
+
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Ticket" asp-action="Index">View Tickets</a>
                             </li>
-                            @if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
-                            {
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Ticket" asp-action="Manage">Manage Tickets</a>
-                                </li>
                             }
+                           
                             @if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
                             {
                                 <li class="nav-item">
@@ -45,15 +43,7 @@
                                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Logout</a>
                             </li>
                         }
-                        else
-                        {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Login</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Signup">Signup</a>
-                            </li>
-                        }
+                        
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
