--- a/makingticket/Views/Role/Index.cshtml
+++ b/makingticket/Views/Role/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Manage Roles";
 }
+<link rel="stylesheet" href="~/css/role-management.css" />
+
 
 <h1>Manage Roles</h1>
 
@@ -79,7 +81,7 @@
         </div>
     </div>
 </div>
-@section Scrip{
+@section Scripts{
 
 <script>
     function showRoleChangeModal(userId, userName) {
