--- a/makingticket/Views/Account/Login.cshtml
+++ b/makingticket/Views/Account/Login.cshtml
@@ -1,38 +1,34 @@
 ﻿@model makingticket.ViewModels.LoginViewModel
 
-<h2>Login</h2>
-<form asp-action="Login" method="post">
-    <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" type="password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <input asp-for="RememberMe" type="checkbox" />
-        <label asp-for="RememberMe"></label>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+<link rel="stylesheet" href="~/css/auth.css" />
+
+<div class="card">
+    <h2>Login</h2>
+    <form asp-action="Login" method="post">
+        <div class="form-group">
+            <label asp-for="Email"></label>
+            <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Password"></label>
+            <input asp-for="Password" type="password" class="form-control" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <input asp-for="RememberMe" type="checkbox" />
+            <label asp-for="RememberMe">Remember me</label>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Login</button>
     </form>
-<a asp-action="Signup">Don't have an account? Sign up</a>
-@if (ViewData["ErrorMessage"] != null)
-{
-    <div class="alert alert-danger mt-2">
-        @ViewData["ErrorMessage"]
+    <div class="text-center">
+        <a asp-action="Signup">Don't have an account? Sign up</a>
     </div>
-}
-@* @section Scripts { *@
-@*     <script> *@
-@*         $(document).ready(function () { *@
-@*             if ($("#errorMessage").length) { *@
-@*                 setTimeout(function () { *@
-@*                     $("#errorMessage").fadeOut("slow"); *@
-@*                 }, 2000); // 2 seconds *@
-@*             } *@
-@*         }); *@
-@*     </script> *@
-@* } *@
+
+    @if (ViewData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger mt-2">
+            @ViewData["ErrorMessage"]
+        </div>
+    }
+</div>
