--- a/makingticket/Views/Account/Signup.cshtml
+++ b/makingticket/Views/Account/Signup.cshtml
@@ -1,28 +1,32 @@
 ﻿@model makingticket.ViewModels.SignupViewModel
 
-<h2>Signup</h2>
+<link rel="stylesheet" href="~/css/auth.css" />
 
-<!-- Display Validation Errors for Email and Password -->
-<form asp-action="Signup" method="post">
-    <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
+<div class="card">
+    <h2>Signup</h2>
+    <form asp-action="Signup" method="post">
+        <div class="form-group">
+            <label asp-for="Email"></label>
+            <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Password"></label>
+            <input asp-for="Password" type="password" class="form-control" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="ConfirmPassword"></label>
+            <input asp-for="ConfirmPassword" type="password" class="form-control" />
+            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+        </div>
+
+        <button type="submit" class="btn btn-primary btn-block">Signup</button>
+    </form>
+
+    <div class="text-center">
+        <a asp-action="Login">Already have an account? Login</a>
     </div>
-
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" type="password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="ConfirmPassword"></label>
-        <input asp-for="ConfirmPassword" type="password" class="form-control" />
-        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Signup</button>
-</form>
-
-<a asp-action="Login">Already have an account? Login</a>
+</div>
