--- a/makingticket/Views/Shared/_Layout.cshtml
+++ b/makingticket/Views/Shared/_Layout.cshtml
@@ -6,33 +6,34 @@
     <title>@ViewData["Title"] - makingticket</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">makingticket</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        @if (User?.Identity?.IsAuthenticated == true)
-                        {
+    @if (User?.Identity?.IsAuthenticated == true)
+    {
+        <!-- Navbar for authenticated users -->
+        <header>
+            <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
                             @if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="Ticket" asp-action="Create">Create Ticket</a>
                                 </li>
                             }
-                            @if (User.IsInRole("User")){
-
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Ticket" asp-action="Index">View Tickets</a>
-                            </li>
+                            @if (User.IsInRole("User"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Ticket" asp-action="Index">View Tickets</a>
+                                </li>
                             }
-                           
+
                             @if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
                             {
                                 <li class="nav-item">
@@ -42,14 +43,13 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Logout</a>
                             </li>
-                        }
-                        
-                    </ul>
-                    <partial name="_LoginPartial" />
+                        </ul>
+                        <partial name="_LoginPartial" />
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
+    }
 
     <div class="container">
         <main role="main" class="pb-3">
